# georgia-civic-data-pipeline

./: .cursorignore  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  topic-status.yaml
contracts/_dimensions/: counties.odcs.yaml  demographics.odcs.yaml
contracts/criminal_justice/: decision_points.odcs.yaml  detention_population.odcs.yaml  district_filings.odcs.yaml  district_sentences.odcs.yaml  fatal_crashes.odcs.yaml  firearm_homicide_deaths.odcs.yaml  gsp_traffic_stops.odcs.yaml  hate_crimes.odcs.yaml  inmate_population.odcs.yaml  inmate_releases_county.odcs.yaml  jail_population.odcs.yaml  juvenile_court_cases.odcs.yaml  juvenile_population.odcs.yaml  law_enforcement_employees.odcs.yaml  nibrs_arrests.odcs.yaml  nibrs_offenses.odcs.yaml  out_of_home_placement.odcs.yaml  overdose_deaths.odcs.yaml  parole_decisions.odcs.yaml  placements.odcs.yaml  recidivism_reconviction.odcs.yaml  violent_deaths.odcs.yaml
contracts/education/: act_scores.odcs.yaml  advanced_placement_scores.odcs.yaml  (+47 more)
docs/: codex-review-contract.md  contract-creation.md  data-cleaning.md
scripts/: approve_topic.py  check_approved_topics.py  check_bronze_freshness.py  check_contracts.py  check_referential_integrity.py  generate_contracts.py  generate_dimension_contracts.py  run-bronze-data-structure-education.sh  sync_topic_status.py  validate_topic.py
tests/: test_contract_emitter.py  test_contract_reader.py  test_crosswalks.py  test_demographics.py  test_metadata.py  test_sentinels.py  test_transform_manifest.py  test_transformers.py  test_validators.py  test_vocabulary.py
(+396 files in other folders)
