[project]
name = "georgia-data"
version = "0.1.0"
description = "Georgia Public Data Aggregation Platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "polars>=0.20.0",
    "pyarrow>=14.0.0",
    "requests>=2.31.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "duckdb>=0.10.0",
    "pydantic>=2.0.0",
    "boto3>=1.34.0",
    "tabula-py>=2.9.0",
    "xlrd>=2.0.1",
    "openpyxl>=3.1.0",
    "fastexcel>=0.18.0",
    "pydantic-settings>=2.0.0",
    "slowapi>=0.1.9",
    "pyyaml>=6.0",
    "mcp>=1.27.0",
    "anthropic>=0.45",
    "xlsxwriter>=3.2",
    "pdfplumber>=0.11.10",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "moto>=5.0.0",
    "pandera>=0.18.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# Bronze downloaders embed markdown provenance prose (_provenance.md bodies)
# as string literals; hard-wrapping those lines would churn the emitted docs.
"src/etl/criminal_justice/*/download.py" = ["E501"]
"src/etl/criminal_justice/*/*/download.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
